--- a/public/snaps/index.html
+++ b/public/snaps/index.html
@@ -44,24 +44,53 @@
   <link rel="alternate" type="application/rss+xml+xml" href="https://wickedbrat.com/snaps/index.xml" title="WickedBrat" /> 
    
    <style>
-    .row {
-      display: -ms-flexbox; /* IE 10 */
-      display: flex;
-      -ms-flex-wrap: wrap; /* IE 10 */
-      flex-wrap: wrap;
-      padding: 0 4px;
-    }
+#photos {
+   /* Prevent vertical gaps */
+   line-height: 0;
+   
+   -webkit-column-count: 5;
+   -webkit-column-gap:   0px;
+   -moz-column-count:    5;
+   -moz-column-gap:      0px;
+   column-count:         5;
+   column-gap:           0px;
+}
 
-    .column {
-      -ms-flex: 25%; /* IE 10 */
-      flex: 25%;
-      padding: 0 4px;
-    }
+#photos img {
+  /* Just in case there are inline attributes */
+  width: 100% !important;
+  height: auto !important;
+}
 
-    .column img {
-      margin-top: 8px;
-      vertical-align: middle;
-    }
+@media (max-width: 1200px) {
+  #photos {
+  -moz-column-count:    4;
+  -webkit-column-count: 4;
+  column-count:         4;
+  }
+}
+@media (max-width: 1000px) {
+  #photos {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 800px) {
+  #photos {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+@media (max-width: 400px) {
+  #photos {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
+  }
+}
+
    </style>
     
 
@@ -138,25 +167,8 @@ if (!doNotTrack) {
         <h2 class="post__title">
           <a href="/snaps/snaps/">Snaps</a>
         </h2>
-        <div class="row">
-
-        <div class="column">
-          <img src="./11.jpg" style="width:100%">
-          <img src="./12.jpg" style="width:100%">
-          <img src="./13.jpg" style="width:100%">
-          <img src="./14.jpg" style="width:100%">
-          <img src="./15.jpg" style="width:100%">
-          <img src="./16.jpg" style="width:100%">
-          <img src="./17.jpg" style="width:100%">
-          <img src="./18.jpg" style="width:100%">
-          <img src="./19.jpg" style="width:100%">
-          <img src="./110.jpg" style="width:100%">
-          <img src="./111.jpg" style="width:100%">
-          <img src="./112.jpg" style="width:100%">
-          <img src="./113.jpg" style="width:100%">
-          <img src="./114.jpg" style="width:100%">
-        </div>
-        </div>
+        
+        <section id="photos"></section>
 
 
       </div>
@@ -166,7 +178,21 @@ if (!doNotTrack) {
 
 </div>
 
+<script>
+  function getRandomSize(min, max) {
+  return Math.round(Math.random() * (max - min) + min);
+}
 
+var allImages = "";
+
+for (var i = 0; i < 6; i++) {
+  var width = getRandomSize(200, 400);
+  var height =  getRandomSize(200, 400);
+  allImages += '<img src="./1'+ i + '.jpg" alt="pretty kitty">';
+}
+
+$('#photos').append(allImages);
+</script>
   </main>
   <script src="/js/index.min.49e4d8a384357d9b445b87371863419937ede9fa77737522ffb633073aebfa44.js" integrity="sha256-SeTYo4Q1fZtEW4c3GGNBmTft6fp3c3Ui/7YzBzrr&#43;kQ=" crossorigin="anonymous"></script>
    
