--- a/public/snaps/index.html
+++ b/public/snaps/index.html
@@ -191,7 +191,7 @@ for (var i = 0; i < 6; i++) {
   allImages += '<img src="./1'+ i + '.jpg" alt="pretty kitty">';
 }
 
-$('#photos').append(allImages);
+document.getElementById("photos").append(allImages);
 </script>
   </main>
   <script src="/js/index.min.49e4d8a384357d9b445b87371863419937ede9fa77737522ffb633073aebfa44.js" integrity="sha256-SeTYo4Q1fZtEW4c3GGNBmTft6fp3c3Ui/7YzBzrr&#43;kQ=" crossorigin="anonymous"></script>
