--- a/public/snaps/index.html
+++ b/public/snaps/index.html
@@ -59,6 +59,7 @@
 #photos img {
   /* Just in case there are inline attributes */
   width: 100% !important;
+  padding: 10px 10px 0 0;
   height: auto !important;
 }
 
