--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css" integrity="sha256-47DEQpj8HBSa&#43;/TImW&#43;5JCeuQeRkm5NMpJWZG3hSuFU="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.11a70ddf7b46830749cfae7592e5cc9d14e3c0d3a9105060729f79a3f56b3d9f.css" integrity="sha256-EacN33tGgwdJz651kuXMnRTjwNOpEFBgcp95o/VrPZ8="/>
   
   
    
