--- a/public/404.html
+++ b/public/404.html
@@ -35,7 +35,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.11a70ddf7b46830749cfae7592e5cc9d14e3c0d3a9105060729f79a3f56b3d9f.css" integrity="sha256-EacN33tGgwdJz651kuXMnRTjwNOpEFBgcp95o/VrPZ8="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.1a49ea6d57f503b93def9076bd3f8180354dbce3e396e6f4eab7ccbde801e44a.css" integrity="sha256-GknqbVf1A7k975B2vT&#43;BgDVNvOPjlub06rfMvegB5Eo="/>
   
   
    
