--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.1a49ea6d57f503b93def9076bd3f8180354dbce3e396e6f4eab7ccbde801e44a.css" integrity="sha256-GknqbVf1A7k975B2vT&#43;BgDVNvOPjlub06rfMvegB5Eo="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.9224707ca96d0fb890df86b93b2aadd6c0e5d696ebcb2038de1391667baf58b0.css" integrity="sha256-kiRwfKltD7iQ34a5Oyqt1sDl1pbryyA43hORZnuvWLA="/>
   
   
    
