--- a/public/404.html
+++ b/public/404.html
@@ -35,7 +35,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.9224707ca96d0fb890df86b93b2aadd6c0e5d696ebcb2038de1391667baf58b0.css" integrity="sha256-kiRwfKltD7iQ34a5Oyqt1sDl1pbryyA43hORZnuvWLA="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.379ce50fbb7f94d9122f1a81d2c7b2d68f3627a62bbad1ecfb057155fe1387d2.css" integrity="sha256-N5zlD7t/lNkSLxqB0sey1o82J6YrutHs&#43;wVxVf4Th9I="/>
   
   
    
