--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.379ce50fbb7f94d9122f1a81d2c7b2d68f3627a62bbad1ecfb057155fe1387d2.css" integrity="sha256-N5zlD7t/lNkSLxqB0sey1o82J6YrutHs&#43;wVxVf4Th9I="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.ce8a6f1343cde3f2e931c78ed406d3090cf390e0135b3510448ab5431ece3533.css" integrity="sha256-zopvE0PN4/LpMceO1AbTCQzzkOATWzUQRIq1Qx7ONTM="/>
   
   
    
