--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.ce8a6f1343cde3f2e931c78ed406d3090cf390e0135b3510448ab5431ece3533.css" integrity="sha256-zopvE0PN4/LpMceO1AbTCQzzkOATWzUQRIq1Qx7ONTM="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.82876384bc5ab5df6ee2dab81c086f52ea11fc903421dd9fcf16fed6ff757aad.css" integrity="sha256-godjhLxatd9u4tq4HAhvUuoR/JA0Id2fzxb&#43;1v91eq0="/>
   
   
    
