--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link type="text/css" rel="stylesheet" href="/css/about.min.faa0cdf2d211fbe1d8399c340d898781f94b8e9a9d0e53657a5b8bf7c13e990b.css" integrity="sha256-&#43;qDN8tIR&#43;&#43;HYOZw0DYmHgflLjpqdDlNleluL98E&#43;mQs="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.705be309466c01152674f12754604e6792c07677b0253fb77d441c1b41be13df.css" integrity="sha256-cFvjCUZsARUmdPEnVGBOZ5LAdnewJT&#43;3fUQcG0G&#43;E98="/>
+    <link type="text/css" rel="stylesheet" href="/css/custom.min.d377033f4509d70baa31f5c4d8d5fe53cae98bba4a3310257c930bfdf6f556b9.css" integrity="sha256-03cDP0UJ1wuqMfXE2NX&#43;U8rpi7pKMxAlfJML/fb1Vrk="/>
   
   
    
