Updates Blog padding and link

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@ if (!doNotTrack) {
       </li>
     
       <li>
-        <a  href="https://www.flickr.com/photos/190329325@N03" target="_blank">snaps</a>
+        <a  href="https://www.flickr.com/photos/190329325@N03">snaps</a>
       </li>
     
   </ul>
