--- a/public/404.html
+++ b/public/404.html
@@ -84,7 +84,7 @@ if (!doNotTrack) {
 
   <ul class="nav__list">
     <a href="/">
-      <img src="/blog/man.png" width="60px" class="avatar-img"/>
+      <img src="/blog/avatar.png" width="60px" class="avatar-img"/>
     </a>
     
     
