added about imposter image

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us" class="lightTheme" id="theme">
 
 <head>
-  <title> | WickedBrat</title>
+  <title>About myself | WickedBrat</title>
 
   <meta charset="UTF-8">
   <meta name="language" content="en">
