added about imposter image

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -124,13 +124,13 @@ if (!doNotTrack) {
 <div class="splash-container" style="height: 74vh; display: flex; justify-content: center; align-items: center; width: 40%; margin: 0 auto;">
   <div class="splash">
     <div style="display: flex; align-items: center; justify-content: space-between;">
-      <h1>Siddhant was not the imposter</h1>
-      <img src="blog/red_imposter.png" alt="Imposter">
+      <h1 style="font-size: 2rem;">Siddhant was not the imposter</h1>
+      <img src="/blog/red_imposter.png" alt="Imposter">
     </div>
-    <h2>
+    <h2 style="font-weight: 100;">
       Well.. hello there! 
       
-      <br>
+      <br><br>
       
       You're here that means you're interested in knowing more about me. Having recieved my undergrad degree from IIIT Allahabad, I'm now solving marketplace problems as a Product Engineer in Gojek. 
 
