--- a/public/about/index.html
+++ b/public/about/index.html
@@ -159,9 +159,9 @@ if (!doNotTrack) {
     
 <div class="splash-container" style="height: 74vh; display: flex; justify-content: center; align-items: center; max-width: 730px; margin: 0 auto;">
   <div class="splash">
-    <div style="display: flex; align-items: center; justify-content: space-between;">
+    <div style="display: flex; align-items: baseline; justify-content: space-between; width: 600px;">
       <h1 style="font-size: 2rem;">Siddhant was the imposter</h1>
-      <img src="/blog/red_imposter.png" alt="Imposter" width="50px" class="rotating">
+      <img src="/blog/red_imposter.png" alt="Imposter" width="40px" class="rotating">
     </div>
     <h2 style="font-weight: 100;">
       Well.. hello there! 
