--- a/public/about/index.html
+++ b/public/about/index.html
@@ -157,9 +157,9 @@ if (!doNotTrack) {
 
   <main>
     
-<div class="splash-container" style="height: 74vh; display: flex; justify-content: center; align-items: center; max-width: 730px; margin: 0 auto;">
+<div class="splash-container" style="height: 74vh; display: flex; justify-content: center; align-items: center; max-width: 90%; margin: 0 auto; width: 750px;">
   <div class="splash">
-    <div style="display: flex; align-items: baseline; justify-content: space-between; width: 600px;">
+    <div style="display: flex; align-items: flex-end; justify-content: space-between; width: 85%;">
       <h1 style="font-size: 2rem;">Siddhant was the imposter</h1>
       <img src="/blog/red_imposter.png" alt="Imposter" width="50px" class="rotating">
     </div>
