Updates link of snaps

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -172,7 +172,8 @@ if (!doNotTrack) {
 
       <br><br>
 
-      Apart from being a memes fan, I love capturing beauty through lens. Checkout some of my snaps. 
+      Apart from being a memes fan, I love capturing beauty through lens. Checkout some of <a  href="https://www.flickr.com/photos/190329325@N03"
+      target="_blank" >my snaps</a>. 
     </h2>
   </div>
 </div>
