--- a/public/about/index.html
+++ b/public/about/index.html
@@ -170,7 +170,7 @@
     <div class="splash-container" style="height: 74vh; display: flex; justify-content: center; align-items: center; max-width: 90%; margin: 0 auto; width: 750px;">
         <div class="splash">
             <div style="display: flex; align-items: flex-end; justify-content: space-between; width: 85%;">
-                <h1 style="font-size: 2rem;">Siddhant was the imposter</h1>
+                <h1 style="font-size: 2rem;">Siddhant was an imposter</h1>
                 <img src="/blog/red_imposter.png" alt="Imposter" width="50px" class="rotating">
             </div>
             <h2 style="font-weight: 100;">
