--- a/public/reads/index.html
+++ b/public/reads/index.html
@@ -172,7 +172,7 @@ if (!doNotTrack) {
     <div class="post-list__container">
       <div>
       <h1>Reads</h1>
-      <p>Recently stepping into the unknown lands of books and novels, I think I could get used to it. <br>
+      <p>Recently stepping into the unknown lands of books and novels, I discovered I could get used to it. <br>
         Like every explorer, I do need some directions from my fellow adventurers. Hit me up if you'd like to recommend me something to read!</p>
         <p>Here's my journey so far</p>
         <ul>
