--- a/content/about/index.html
+++ b/content/about/index.html
@@ -128,7 +128,7 @@
 <nav class="nav" id="navigation">
 
     <ul class="nav__list">
-        <a href="/">
+        <a href="/about">
             <img src="/blog/avatar.png" width="60px" class="avatar-img"/>
         </a>
 
