--- a/public/reads/index.html
+++ b/public/reads/index.html
@@ -63,9 +63,6 @@
   -o-animation: rotating 2s linear infinite;
   animation: rotating 2s linear infinite;
 }
-a {
-  color: #1b8ce3;
-}
   </style>
   
     
@@ -131,7 +128,7 @@ if (!doNotTrack) {
   <nav class="nav" id="navigation">
 
   <ul class="nav__list">
-    <a href="/">
+    <a href="/about">
       <img src="/blog/avatar.png" width="60px" class="avatar-img"/>
     </a>
     
