--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,6 +63,10 @@
             -o-animation: rotating 2s linear infinite;
             animation: rotating 2s linear infinite;
         }
+
+        a {
+            color: #1b8ce3 !important;
+        }
     </style>
 
 
