--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
   
   
-  <link type="text/css" rel="stylesheet" href="/css/about.min.6af3e51782acdd9bfaaa3ffb29b295b1418194c87264b39d9e598750f5fe6cdf.css" integrity="sha256-avPlF4Ks3Zv6qj/7KbKVsUGBlMhyZLOdnlmHUPX&#43;bN8=" />
+  <link type="text/css" rel="stylesheet" href="/css/about.min.44721eec3f5a622a6e309e21b6c8927aadac75b430ebcbda170dbf31115be7c7.css" integrity="sha256-RHIe7D9aYipuMJ4htsiSeq2sdbQw68vaFw2/MRFb58c=" />
   
   
   <link type="text/css" rel="stylesheet" href="/css/custom.min.6cd4d2cb79314f147733e15b1a46db0a80f1255c4d4c38c784cc4cb221871ad2.css" integrity="sha256-bNTSy3kxTxR3M&#43;FbGkbbCoDxJVxNTDjHhMxMsiGHGtI=" />
