--- a/public/reads/index.html
+++ b/public/reads/index.html
@@ -179,11 +179,11 @@ if (!doNotTrack) {
         <ul>
           <li>Currently reading:
             <ul>
-              <li><a href="https://jamesclear.com/atomic-habits" target="_blank">Atomic Habits</a></li>
-              <li><a href="https://www.richdad.com/" target="_blank">Rich Dad, Poor Dad</a></li></li>
+              <li><a href="https://www.richdad.com/" target="_blank">Rich Dad, Poor Dad</a></li>
             </ul>
           <li>Have read:
           <ul>
+            <li><a href="https://jamesclear.com/atomic-habits" target="_blank">Atomic Habits</a></li>
             <li><a href="https://www.ynharari.com/book/sapiens-2/" target="_blank">Sapiens</a></li>
             <li><a target="_blank" href="https://www.the1thing.com/">The One Thing</a> (Gifted by <a href="https://twitter.com/aayasawanjhumke" target="_blank">Abhishek D Nandan</a>)</li>
           </ul>
