--- a/content/reads/index.html
+++ b/content/reads/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="language" content="en">
   <meta name="description"
-    content="">
+    content="A place on the internet just for knowing Siddhant better! Learn more about me here...">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
