Updated Site title

--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en-us" class="lightTheme" id="theme">
 
 <head>
-  <title>404 Page not found | WickedBrat</title>
+  <title>404 Page not found | Siddhant Srivastav</title>
 
   <meta charset="UTF-8">
   <meta name="language" content="en">
