Added chaos monkeys to to-read section

--- a/content/reads/index.html
+++ b/content/reads/index.html
@@ -189,6 +189,7 @@ if (!doNotTrack) {
           </ul>
           <li>Want to read:
           <ul>
+            <li><a href="https://www.amazon.in/Alchemist-Plus-Paulo-Coelho/dp/0061122416" target="_blank">Chaos Monkeys (Suggested by: <a href="http://jigarc.live/">Jigar</a>)</a></li>
             <li><a href="https://www.amazon.in/Alchemist-Plus-Paulo-Coelho/dp/0061122416" target="_blank">The Alchemist (Widely suggested)</a></li>
             <li><a target="_blank" href="https://www.goodreads.com/book/show/83580.How_We_Believe">How we believe</a></li>
           </ul>
