--- a/content/reads/index.html
+++ b/content/reads/index.html
@@ -189,8 +189,8 @@ if (!doNotTrack) {
           </ul>
           <li>Want to read:
           <ul>
-            <li><a href="https://www.amazon.in/Alchemist-Plus-Paulo-Coelho/dp/0061122416" target="_blank">Chaos Monkeys (Suggested by: <a href="http://jigarc.live/">Jigar</a>)</a></li>
-            <li><a href="https://www.amazon.in/Alchemist-Plus-Paulo-Coelho/dp/0061122416" target="_blank">The Alchemist (Widely suggested)</a></li>
+            <li><a href="https://www.amazon.in/Chaos-Monkeys-Obscene-Fortune-Failure/dp/0062458191" target="_blank">Chaos Monkeys</a>(Suggested by: <a href="http://jigarc.live/">Jigar</a>)</li>
+            <li><a href="https://www.amazon.in/Alchemist-Plus-Paulo-Coelho/dp/0061122416" target="_blank">The Alchemist</a> (Widely suggested)</li>
             <li><a target="_blank" href="https://www.goodreads.com/book/show/83580.How_We_Believe">How we believe</a></li>
           </ul>
         </ul>
